--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
     background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(100px); 
     -webkit-backdrop-filter: blur(10px); 
+    overflow: hidden;
 }
 
 .theme-light input{
@@ -39,6 +40,7 @@
     background-color: rgba(20,20,20,0.2);
     backdrop-filter: blur(100px); 
     -webkit-backdrop-filter: blur(10px);
+    overflow: hidden;
 }
 
 
