--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,8 @@
 
 .theme-light .sidebar{
     background-color: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(100px); 
-    -webkit-backdrop-filter: blur(10px); 
-    overflow: hidden;
+    backdrop-filter: blur(100px) !important;
+    -webkit-backdrop-filter: blur(100px) !important; 
 }
 
 .theme-light input{
@@ -38,9 +37,8 @@
 
 .theme-dark .sidebar{
     background-color: rgba(20,20,20,0.2);
-    backdrop-filter: blur(100px); 
-    -webkit-backdrop-filter: blur(10px);
-    overflow: hidden;
+    backdrop-filter: blur(100px) !important; 
+    -webkit-backdrop-filter: blur(100px) !important;
 }
 
 
